# PIUnivesp_2022

./: Procfile  README.md  app.py  pyproject.toml
conection/: conexao.py  db_clientes.db
models/: cliente.py
static/css/: styles.css
static/js/: scripts.js
templates/: base.html  cadastro_clientes.html  editar_clientes.html  index.html  listar_clientes.html
