[tool.poetry]
name = "piunivespbjp"
version = "0.1.0"
description = ""
authors = ["PIUnivespBJP <94024429+PIUnivespBJP@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
